--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Барбершоп "Бородинский"</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Мой "Барбершоп"</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <header class="main-header">
     <a class="main-header__logo" href="/">
-        <img class="main-header__logo-image" src="img/logotype-mobile.svg" width="226" height="30" alt='Барбершоп "Бородинский"'>
+        <picture>
+            <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg">
+            <img class="main-header__logo-image" src="img/logo.svg" width="226" height="30" alt='Барбершоп "Бородинский"'>
+        </picture>
     </a>
-    <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
+    <nav class="main-nav main-nav--closed  main-nav--nojs">
+        <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+        </button>
         <div class="main-nav__wrapper">
             <ul class="main-nav__list nav-list">
                 <li class="nav-list__item nav-list__item--active">
@@ -46,7 +53,7 @@
     <section class="stats">
         <header class="stats__header">
             <h2 class="visually-hidden">Статистика барбершопа</h2>
-            <b class="stats__slogan">Стрижка у нас это выгодно!</b>
+            <b class="stats__slogan">Стрижка у нас <br>это выгодно!</b>
             <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
             <small class="stats__legend stats__legend--top">
                 <sup>*</sup> - приведенные данные ложь
@@ -94,26 +101,26 @@
         <div class="advantages__wrapper slider">
             <h2 class="visually-hidden">Наши преимущества</h2>
             <ul class="advantages__list slider__list">
-                <li class="advantages__item advantages__item--fast slider__item">
+                <li class="advantages__item advantages__item--fast slider__item--advantages slider__item--advantages-active">
                     <h3 class="advantages__title">Быстро</h3>
                     <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы -
                         счастливый обладатель стильной стрижки-минутки</p>
                 </li>
-                <li class="advantages__item advantages__item--cool slider__item">
+                <li class="advantages__item advantages__item--cool slider__item--advantages">
                     <h3 class="advantages__title">Круто</h3>
                     <p class="advantages__description">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду
                         футбола или кино. Во всяком случае внешне.</p>
                 </li>
-                <li class="advantages__item advantages__item--price slider__item">
+                <li class="advantages__item advantages__item--price slider__item--advantages">
                     <h3 class="advantages__title">Дорого</h3>
                     <p class="advantages__description">Наши мастера - профессионалы своего дела и не могут стоить
                         дёшево. К тому же, разве цена не даёт определённый статус?</p>
                 </li>
             </ul>
             <p class="advantages__toggles slider__toggles">
-                <button class="slider__toggle" type="button">1</button>
-                <button class="slider__toggle" type="button">2</button>
-                <button class="slider__toggle" type="button">3</button>
+                <button class="slider__toggle slider__toggle--advantages slider__toggle--advantages-active" type="button"><span class="visually-hidden">Следующий слайд</span></button>
+                <button class="slider__toggle slider__toggle--advantages" type="button"><span class="visually-hidden">Следующий слайд</span></button>
+                <button class="slider__toggle slider__toggle--advantages" type="button"><span class="visually-hidden">Следующий слайд</span></button>
             </p>
         </div>
     </section>
@@ -124,7 +131,8 @@
             <ul class="news__list">
                 <li class="news__item">
                     <time class="news__date">
-                        <b class="news__day">29</b>сент
+                        <b class="news__day">29</b>
+                        сент
                     </time>
                     <p class="news__text">
                         Нам наконец завезли Ягермайстер! Теперь вы можете пропустить стаканичик во время стрижки.
@@ -132,7 +140,8 @@
                 </li>
                 <li class="news__item">
                     <time class="news__date">
-                        <b class="news__day">19</b>сент
+                        <b class="news__day">19</b>
+                        сент
                     </time>
                     <p class="news__text">
                         В нашей команде пополнение, Борис "Бритва" Стригунец, обладатель множества титулов и наград
@@ -147,9 +156,9 @@
     <section class="reviews">
         <div class="reviews__wrapper slider">
             <h2 class="reviews__title">Отзывы о нас</h2>
-            <a class="reviews__write button" href="#">Оставить свой</a>
+            <!--<a class="reviews__write button" href="#">Оставить свой</a>-->
             <div class="reviews__list slider_list">
-                <blockquote class="reviews__item slider__item">
+                <blockquote class="reviews__item slider__item--reviews slider__item--reviews-active">
                     <p class="reviews__author-picture">
                         <img class="reviews__author-image" src="img/travis-mob.jpg" width="50" height="49" alt="Travis Baker">
                     </p>
@@ -158,20 +167,20 @@
                         Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!
                     </p>
                 </blockquote>
-                <blockquote class="reviews__item slider__item">
+                <blockquote class="reviews__item slider__item--reviews">
                     <p class="reviews__author-picture">
                         <img class="reviews__author-image" src="img/travis-mob.jpg" width="50" height="49" alt="Travis Baker">
                     </p>
-                    <cite class="reviews__author-name">Трэвис Баркер</cite>
+                    <cite class="reviews__author-name">Бубалех Иванович</cite>
                     <p class="reviews__text">
                         Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!
                     </p>
                 </blockquote>
-                <blockquote class="reviews__item slider__item">
+                <blockquote class="reviews__item slider__item--reviews">
                     <p class="reviews__author-picture">
                         <img class="reviews__author-image" src="img/travis-mob.jpg" width="50" height="49" alt="Travis Baker">
                     </p>
-                    <cite class="reviews__author-name">Трэвис Баркер</cite>
+                    <cite class="reviews__author-name">Иван Бубалехович</cite>
                     <p class="reviews__text">
                         Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!
                     </p>
@@ -180,9 +189,9 @@
                 <button class="reviews__next" type="button">Следующий отзыв</button>
             </div>
             <p class="reviews__toggles slider__toggles">
-                <button class="slider__toggle" type="button">1</button>
-                <button class="slider__toggle" type="button">2</button>
-                <button class="slider__toggle" type="button">3</button>
+                <button class="slider__toggle slider__toggle--reviews slider__toggle--reviews-active" type="button"><span class="visually-hidden">1</span></button>
+                <button class="slider__toggle slider__toggle--reviews" type="button"><span class="visually-hidden">2</span></button>
+                <button class="slider__toggle slider__toggle--reviews" type="button"><span class="visually-hidden">3</span></button>
             </p>
         </div>
     </section>
@@ -218,5 +227,25 @@
         </div>
     </div>
 </footer>
+
+<script>
+    var navMain = document.querySelector('.main-nav'),
+        navToggle = document.querySelector('.main-nav__toggle');
+
+    navMain.classList.remove('main-nav--nojs');
+
+    navToggle.addEventListener('click', function () {
+        if (navMain.classList.contains('main-nav--closed')) {
+            navMain.classList.remove('main-nav--closed');
+            navMain.classList.add('main-nav--opened');
+        } else {
+            navMain.classList.add('main-nav--closed');
+            navMain.classList.remove('main-nav--opened');
+        }
+    }, false);
+</script>
+
+<script src="js/main.js"></script>
+
 </body>
 </html>
